# School_Management_System

./: .env.example  .gitignore  COMPETITIVE_ROADMAP.md  DOCUMENTATION.md  LEGACY_DATA_MAP.md  README.md  dev.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/apps/academics/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/accounting/: admin.py  apps.py  groups.py  models.py  serializers.py  urls.py  views.py
backend/apps/attendance/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/audit/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/billing/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/communication/: admin.py  apps.py  models.py  providers.py  receivers.py  serializers.py  sms_views.py  tasks.py  urls.py  views.py
backend/apps/core/: dates.py  exceptions.py  models.py  permissions.py  reports.py  routers.py  tenancy.py  uploads.py  views.py  viewsets.py
backend/apps/devices/: admin.py  apps.py  models.py  urls.py  urls_protocol.py  views_admin.py  views_protocol.py  views_protocol_builders.py
backend/apps/examinations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/homework/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/identity/: admin.py  apps.py  backends.py  lockout.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: celery.py  urls.py
(+282 files in other folders)
